# Struster

Backend/: Cargo.toml
Backend/src/: main.rs
Dev/src/app/: app.module.ts
Production/: .firebaserc  README.md  angular.json  firebase.json  karma.conf.js  package-lock.json  package.json
Production/.firebase/: hosting.ZGlzdA.cache  hosting.ZGlzdFxTdHJ1c3Rlcg.cache  hosting.ZGlzdFxTdHJ1c3RlclZldm8.cache  hosting.ZGlzdFxzdHJ1c3RQcm9k.cache  hosting.ZGlzdFxzdHJ1c3RlclByb2Q.cache
Production/e2e/src/: app.e2e-spec.ts
Production/src/: index.html
Production/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  login-service.service.ts
Production/src/app/home/: home.component.css  home.component.ts  (+1 more)
SubsPls/: clean.js  dev.js  index.js  package-lock.json  package.json  shows.json
Vevo/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
Vevo/e2e/src/: app.e2e-spec.ts
Vevo/src/: index.html
Vevo/src/app/: app.component.spec.ts  app.component.ts  app.module.ts
WebApp/: package.json
WebApp/docs/: index.html
WebApp/src/app/: app.component.ts
cli/: Cargo.toml
cli/src/: main.rs
docs/: main.abcc554e7ae0a192c9dc.js
src/app/: app.component.html  app.component.spec.ts
strustApp/: README.md  angular.json  karma.conf.js  package-lock.json
strustApp/e2e/src/: app.e2e-spec.ts
strustApp/src/: index.html
strustApp/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
uploader/: index.js  package-lock.json  shows.json  updateJson.js
(+6 files in other folders)
