[package]
name = "rocket-anime"
version = "0.1.0"
authors = ["Noah Lanson <lanson.noah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rand = "0.5.5"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]